--- a/meta/main.yml
+++ b/meta/main.yml
@@ -3,7 +3,7 @@ galaxy_info:
   role_name: pihole_docker
   author: Sebastian Berthold
   description: starts a pihole instance on docker
-  #company: your company (optional)
+  # company: your company (optional)
 
   # If the issue tracker for your role is not on github, uncomment the
   # next line and provide a value
@@ -18,7 +18,7 @@ galaxy_info:
   # - CC-BY-4.0
   license: MIT
 
-  min_ansible_version: 2.10
+  min_ansible_version: '2.10'
 
   # If this a Container Enabled role, provide the minimum Ansible Container version.
   # min_ansible_container_version:
@@ -43,8 +43,8 @@ galaxy_info:
   platforms:
     - name: EL
       versions:
-        - 7
-        - 8
+        - '7'
+        - '8'
 
   galaxy_tags:
     - docker
@@ -58,5 +58,5 @@ galaxy_info:
     #       Maximum 20 tags per role.
 
 dependencies:
-  - { role: sleif.firewalld, tags: firewalld }
-  - { role: sleif.docker, tags: docker }
+  - {role: sleif.firewalld, tags: firewalld}
+  - {role: sleif.docker, tags: docker}
