--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -4,7 +4,7 @@ container_storage_dir_base: '/srv'
 pihole_password: ""
 pihole_password_encrypted: ""
 
-pihole_rev_server: False
+pihole_rev_server: false
 pihole_rev_server_target: 192.168.178.1
 pihole_rev_server_domain: fritz.box
 pihole_rev_server_cidr: "192.168.178.0/24"
