--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -19,11 +19,11 @@
     state: absent
 
 # TODO prefill /srv/pihole/dnsmasq.d/99-pihole.conf with further server entries (as in 01-pihole.conf)
-- name: disable systemd-resolved
+- name: disable systemd-resolved  # noqa: ignore-errors
   ansible.builtin.service:
     name: systemd-resolved
     state: stopped
-    enabled: no
+    enabled: false
   ignore_errors: true
 
 - name: enable fallback nameserver in resolv.conf
@@ -32,7 +32,7 @@
     regexp: "{{ item.regexp }}"
     line: "{{ item.line }}"
   with_items:
-    - { regexp: '^nameserver 1\.1\.1\.1', line: 'nameserver 1.1.1.1' }
+    - {regexp: '^nameserver 1\.1\.1\.1', line: 'nameserver 1.1.1.1'}
 
 - name: Pihole-Container starten
   community.general.docker_container:
@@ -40,13 +40,13 @@
     image: pihole/pihole:latest
     state: started
     restart_policy: always
-    recreate: yes
-    restart: yes
-    force_kill: yes
+    recreate: true
+    restart: true
+    force_kill: true
     networks:
       - name: "{{ DOCKER_NETWORK_NAME }}"
-    networks_cli_compatible: yes
-    pull: yes
+    networks_cli_compatible: true
+    pull: true
     published_ports: "{{ pihole_published_ports }}"
     volumes:
       - "{{ container_storage_dir_base }}/pihole/pihole/:/etc/pihole/:Z"
@@ -55,9 +55,9 @@
     capabilities:
       - NET_ADMIN
     env:
-      VIRTUAL_HOST: "{{ VIRTUAL_HOST }}"
-      LETSENCRYPT_HOST: "{{ VIRTUAL_HOST }}"
-      LETSENCRYPT_EMAIL: "{{ LETSENCRYPT_EMAIL }}"
+      VIRTUAL_HOST: "{{ virtual_host }}"
+      LETSENCRYPT_HOST: "{{ virtual_host }}"
+      LETSENCRYPT_EMAIL: "{{ letsencrypt_email }}"
       ServerIP: "{{ ansible_default_ipv4.address }}"
       WEBPASSWORD: random
       PIHOLE_DNS_: "1.1.1.1;1.0.0.1"
@@ -70,7 +70,7 @@
   tags:
     - container
 
-- name: pihole | set pihole password
+- name: pihole | set pihole password  # noqa: no-changed-when
   ansible.builtin.command: docker exec -ti pihole /usr/local/bin/pihole -a -p "{{ pihole_password }}"
 
 - name: pihole configuration file
@@ -79,8 +79,8 @@
     regexp: "{{ item.regexp }}"
     line: "{{ item.line }}"
   with_items:
-    # - { regexp: '^WEBPASSWORD.*', line: 'WEBPASSWORD={{ pihole_password_encrypted }}' }
-    - { regexp: '^.*REV_SERVER=', line: 'REV_SERVER={{ pihole_rev_server | lower }}' }
+    # - {regexp: '^WEBPASSWORD.*', line: 'WEBPASSWORD={{ pihole_password_encrypted }}'}
+    - {regexp: '^.*REV_SERVER=', line: 'REV_SERVER={{ pihole_rev_server | lower }}'}
 
 - name: pihole configuration file - cond forward
   ansible.builtin.lineinfile:
@@ -89,19 +89,19 @@
     regexp: "{{ item.regexp }}"
     line: "{{ item.line }}"
   with_items:
-    - { regexp: '^.*REV_SERVER_TARGET=', line: 'REV_SERVER_TARGET={{ pihole_rev_server_target }}' }
-    - { regexp: '^.*REV_SERVER_DOMAIN=', line: 'REV_SERVER_DOMAIN={{ pihole_rev_server_domain }}' }
-    - { regexp: '^.*REV_SERVER_CIDR=',   line: 'REV_SERVER_CIDR={{ pihole_rev_server_cidr }}' }
+    - {regexp: '^.*REV_SERVER_TARGET=', line: 'REV_SERVER_TARGET={{ pihole_rev_server_target }}'}
+    - {regexp: '^.*REV_SERVER_DOMAIN=', line: 'REV_SERVER_DOMAIN={{ pihole_rev_server_domain }}'}
+    - {regexp: '^.*REV_SERVER_CIDR=', line: 'REV_SERVER_CIDR={{ pihole_rev_server_cidr }}'}
   when: pihole_rev_server | bool
 
 - name: pihole whitelist file
   ansible.builtin.lineinfile:
     path: "{{ container_storage_dir_base }}/pihole/pihole/whitelist.txt"
     line: "{{ item }}"
-    create: yes
+    create: true
     mode: '0755'
   with_items:
-     - "{{ pihole_whitelist_entries }}"
+    - "{{ pihole_whitelist_entries }}"
 
 - name: disable fallback nameserver in resolv.conf
   ansible.builtin.lineinfile:
@@ -110,4 +110,4 @@
     line: "{{ item.line }}"
     state: absent
   with_items:
-    - { regexp: '^nameserver 1\.1\.1\.1', line: 'nameserver 1.1.1.1' }
+    - {regexp: '^nameserver 1\.1\.1\.1', line: 'nameserver 1.1.1.1'}
